# ssh-ssistant

./: package.json  ssh_upload_download_codemap.md
docs/: transfer_architecture.md
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  models.rs
src-tauri/src/ssh/: client.rs  connection.rs  error_classifier.rs  events.rs  file_ops.rs  health_check.rs  heartbeat.rs  manager.rs  mod.rs  network_monitor.rs  reconnect.rs  utils.rs
src-tauri/src/ssh/transfer/: async_sftp.rs  checkpoint.rs  manager.rs  mod.rs  observability.rs  pool.rs  prompt.rs  retry.rs  state.rs  types.rs
src/components/: FileManager.vue  SettingsModal.vue
src/composables/: useFileError.ts
src/i18n/locales/: en.json  zh.json
src/stores/: sessions.ts  settings.ts  transfers.ts
