[package]
name = "app"
version = "1.8.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
dirs = "5.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "rand_core", "encryption"] }
rand_core = { version = "0.6", features = ["std"] }
notify = "8.2.0"
sha2 = "0.10.9"
hex = "0.4.3"
md-5 = "0.10"
image = "0.24"
windows = { version = "0.60", features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
portable-pty = "0.8"
